--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,10 @@
-name: responsive_widget
+name: responsive_page
 description: Responsive Stateful or Stateless Widget
 version: 0.0.1
-author: Mehmet Yaz
-
+authors:
+  - mehmedyaz@gmail.com
+repository: https://github.com/Mehmetyaz/responsive_widget.git
+homepage: https://github.com/Mehmetyaz/responsive_widget.git
 
 
 environment:
